changes by jeyi

--- a/snippet.html
+++ b/snippet.html
@@ -74,3 +74,15 @@
     </div>
   </div>
 </div>
+
+<div class="dropdown">
+  <p  id="dropdown-label" onclick="showDropdownOptions(1)"
+    >Default Value Here</label
+  >
+  <div id="dropdown-options-1">
+    <p class="dropdown-option">Option One</p>
+    <p class="dropdown-option" data-option="Option One">Option Two</p>
+    <p class="dropdown-option">Option Three</p>
+    <p class="dropdown-option">Option Four</p>
+  </div>
+</div>
