--- a/snippet.html
+++ b/snippet.html
@@ -1,67 +1,84 @@
 <div class="background">
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="./snippet.js"></script>
-  <div class="top">
-    <div class="button">
-      <svg
-        width="12"
-        height="12"
-        viewBox="0 0 12 12"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        class="icon"
-      >
-        <path
-          d="M4 2.5H3C2.73478 2.5 2.48043 2.60536 2.29289 2.79289C2.10536 2.98043 2 3.23478 2 3.5V9.5C2 9.76522 2.10536 10.0196 2.29289 10.2071C2.48043 10.3946 2.73478 10.5 3 10.5H9C9.26522 10.5 9.51957 10.3946 9.70711 10.2071C9.89464 10.0196 10 9.76522 10 9.5V3.5C10 3.23478 9.89464 2.98043 9.70711 2.79289C9.51957 2.60536 9.26522 2.5 9 2.5H8M4 2.5C4 2.23478 4.10536 1.98043 4.29289 1.79289C4.48043 1.60536 4.73478 1.5 5 1.5H7C7.26522 1.5 7.51957 1.60536 7.70711 1.79289C7.89464 1.98043 8 2.23478 8 2.5M4 2.5C4 2.76522 4.10536 3.01957 4.29289 3.20711C4.48043 3.39464 4.73478 3.5 5 3.5H7C7.26522 3.5 7.51957 3.39464 7.70711 3.20711C7.89464 3.01957 8 2.76522 8 2.5"
-          stroke="#B4B4B4"
-          stroke-width="0.916667"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-      <button>copy code</button>
-    </div>
+ <link rel="stylesheet" href="styles.css" />
+ <script defer src="./snippet.js"></script>
+ <div class="top">
+  <div class="button">
+   <svg
+    width="12"
+    height="12"
+    viewBox="0 0 12 12"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    class="icon"
+   >
+    <path
+     d="M4 2.5H3C2.73478 2.5 2.48043 2.60536 2.29289 2.79289C2.10536 2.98043 2 3.23478 2 3.5V9.5C2 9.76522 2.10536 10.0196 2.29289 10.2071C2.48043 10.3946 2.73478 10.5 3 10.5H9C9.26522 10.5 9.51957 10.3946 9.70711 10.2071C9.89464 10.0196 10 9.76522 10 9.5V3.5C10 3.23478 9.89464 2.98043 9.70711 2.79289C9.51957 2.60536 9.26522 2.5 9 2.5H8M4 2.5C4 2.23478 4.10536 1.98043 4.29289 1.79289C4.48043 1.60536 4.73478 1.5 5 1.5H7C7.26522 1.5 7.51957 1.60536 7.70711 1.79289C7.89464 1.98043 8 2.23478 8 2.5M4 2.5C4 2.76522 4.10536 3.01957 4.29289 3.20711C4.48043 3.39464 4.73478 3.5 5 3.5H7C7.26522 3.5 7.51957 3.39464 7.70711 3.20711C7.89464 3.01957 8 2.76522 8 2.5"
+     stroke="#B4B4B4"
+     stroke-width="0.916667"
+     stroke-linecap="round"
+     stroke-linejoin="round"
+    />
+   </svg>
+   <button>copy code</button>
+  </div>
+ </div>
+
+ <div class="options">
+  <p>docker</p>
+  <p>run</p>
+  <div class="green">
+   <p>--platform</p>
   </div>
 
-  <div class="options">
-    <p>docker</p>
-    <p>run</p>
-    <div class="green">
-      <p>--platform</p>
-    </div>
+  <div class="blue">
+   <p>--env NODE_ENV=</p>
+  </div>
 
-    <div class="blue">
-      <p>--env NODE_ENV=</p>
+  <div class="purple">
+   <p>--image</p>
+  </div>
+  <!-- SEE EXAMPLE -->
+  <div class="red flex">
+   <p>--network</p>
+   <div class="dropdown">
+    <!-- 
+  Dropdown Label:
+  - Use a unique identifier (e.g., 'one', 'network', etc.) for the dropdown options.
+  - When setting up each dropdown, pass this identifier into data-dropdown-label and the `toggleDropdownOptions` function.
+  - Example usage: `data-dropdown-label="one" toggleDropdownOptions('one')`.
+-->
+    <p
+     class="dropdown-label"
+     data-dropdown-label="one"
+     onclick="toggleDropdownOptions('one')"
+    >
+     bridge
+    </p>
+    <!-- 
+  Dropdown Options:
+  - Each dropdown options container should use a `data-dropdown` attribute with a unique identifier
+    (e.g., `data-dropdown="one"`).
+  - Each option within the container should have the `dropdown-option` class for styling and event handling.
+-->
+    <div data-dropdown="one" class="dropdown-options">
+     <p class="dropdown-option">bridge</p>
+     <p class="dropdown-option">host</p>
+     <p class="dropdown-option">none</p>
     </div>
-
-    <div class="purple">
-      <p>--image</p>
-    </div>
-
-    <div class="red flex">
-      <p>--network</p>
-      <div class="dropdown">
-        <p  id="dropdown-label" onclick="showDropdownOptions(1)"
-          >bridge</p>
-        <div id="dropdown-options-1">
-          <p class="dropdown-option">bridge</p>
-          <p class="dropdown-option" data-option="Option One">host</p>
-          <p class="dropdown-option">none</p>
-        </div>
-    </div>
+   </div>
   </div>
 
   <div class="validity">
-    <div class="green" style="display: none">
-      <p>Valid</p>
-    </div>
-    <div class="red" style="display: none">
-      <p>Invalid</p>
-    </div>
+   <div class="green" style="display: none">
+    <p>Valid</p>
+   </div>
+   <div class="red" style="display: none">
+    <p>Invalid</p>
+   </div>
   </div>
-</div>
+ </div>
 
-<!-- <div class="dropdown">
+ <!-- <div class="dropdown">
   <p  id="dropdown-label" onclick="showDropdownOptions(1)"
     >Default Value Here</label
   >
@@ -72,3 +89,4 @@
     <p class="dropdown-option">Option Four</p>
   </div>
 </div> -->
+</div>
